jarsigner: Fix some bugs and get everything working
Signed-off-by: Open592 Developer <uss@open592.com>