@@ -8,8 +8,12 @@ application {
 
     applicationDefaultJvmArgs = listOf(
         "--add-opens=java.base/jdk.internal.access=ALL-UNNAMED",
+        "--add-opens=java.base/sun.security.pkcs=ALL-UNNAMED",
+        "--add-opens=java.base/sun.security.tools=ALL-UNNAMED",
         "--add-opens=java.base/sun.security.util=ALL-UNNAMED",
-    )
+        "--add-opens=java.base/sun.security.x509=ALL-UNNAMED",
+        "--add-opens=java.base/sun.security.validator=ALL-UNNAMED",
+        )
 }
 
 group = "org.example"
@@ -34,6 +38,10 @@ tasks.withType<JavaCompile> {
     compilerArgs.add("--add-exports=java.base/sun.security.validator=ALL-UNNAMED")
     compilerArgs.add("--add-exports=java.base/sun.security.x509=ALL-UNNAMED")
     compilerArgs.add("--add-exports=java.base/sun.security.util=ALL-UNNAMED")
+}
+
+tasks.named<JavaExec>("run") {
+    standardInput = System.`in`
 }
 
 tasks.test {
